--- a/references/Globalization_and_Compensation.bib
+++ b/references/Globalization_and_Compensation.bib
@@ -569,3 +569,194 @@ Publisher: Einaudi Institute for Economics and Finance ({EIEF})},
 	doi = {10.3386/w24467},
 	file = {Full Text PDF:C\:\\Users\\nicho\\Zotero\\storage\\LFFA5FXQ\\Mukand and Rodrik - 2018 - The Political Economy of Ideas On Ideas Versus In.pdf:application/pdf},
 }
+
+@article{baicker_policy_2004,
+	title = {Policy Watch: Trade Adjustment Assistance},
+	volume = {18},
+	issn = {0895-3309},
+	url = {https://pubs.aeaweb.org/doi/10.1257/0895330041371196},
+	doi = {10.1257/0895330041371196},
+	shorttitle = {Policy Watch},
+	abstract = {This feature contains short articles on topics that are currently on the agendas of policymakers, thus illustrating the role of economic analysis in illuminating current debates. Suggestions for future columns and comments on past ones should be sent to C. Eugene Steuerle, c/o Journal of Economic Perspectives, The Urban Institute, 2100 M Street {NW}, Washington, D.C. 20037.},
+	pages = {239--256},
+	number = {2},
+	journaltitle = {Journal of Economic Perspectives},
+	shortjournal = {Journal of Economic Perspectives},
+	author = {Baicker, Katherine and Rehavi, M. Marit},
+	urldate = {2023-08-31},
+	date = {2004-05-01},
+	langid = {english},
+	file = {Full Text PDF:C\:\\Users\\nicho\\Zotero\\storage\\VZ5KTGVZ\\Baicker and Rehavi - 2004 - Policy Watch Trade Adjustment Assistance.pdf:application/pdf},
+}
+
+@article{feenstra_trade_1994,
+	title = {Trade adjustment assistance and Pareto gains from trade},
+	volume = {36},
+	issn = {0022-1996},
+	url = {https://www.sciencedirect.com/science/article/pii/0022199694900019},
+	doi = {10.1016/0022-1996(94)90001-9},
+	abstract = {In a model where all factors of production are imperfectly mobile, we argue that the Dixit-Norman scheme of commodity taxes may not lead to strict Pareto gains from trade. Rather, this scheme must be augmented by policies that give factors an incentive to move between industries: hence, the role for trade adjustment assistance. By offering an adjustment subsidy to all individuals wiling to move, and also using the Dixit-Norman pattern of commodity taxes, the government can implement Pareto gains from trade under the condition we identify.},
+	pages = {201--222},
+	number = {3},
+	journaltitle = {Journal of International Economics},
+	shortjournal = {Journal of International Economics},
+	author = {Feenstra, Robert C. and Lewis, Tracy R.},
+	urldate = {2023-08-31},
+	date = {1994-05-01},
+	keywords = {Adjustment assistance, Gains from trade},
+	file = {ScienceDirect Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\QNRJ8FXA\\0022199694900019.html:text/html;Submitted Version:C\:\\Users\\nicho\\Zotero\\storage\\6KKQVNYB\\Feenstra and Lewis - 1994 - Trade adjustment assistance and Pareto gains from .pdf:application/pdf},
+}
+
+@article{ferreira_estimation_2017,
+	title = {Estimation and Inference for Actual and Counterfactual Growth Incidence Curves},
+	author = {Ferreira, Francisco H G and Firpo, Sergio and Galvao, Antonio F},
+	date = {2017},
+	langid = {english},
+	file = {Ferreira et al. - 2017 - Estimation and Inference for Actual and Counterfac.pdf:C\:\\Users\\nicho\\Zotero\\storage\\WEXUXWHL\\Ferreira et al. - 2017 - Estimation and Inference for Actual and Counterfac.pdf:application/pdf},
+}
+
+@online{noauthor_featured_nodate,
+	title = {Featured {SAE} Searchable Databases : U.S. Bureau of Labor Statistics},
+	url = {https://www.bls.gov/sae/data/},
+	shorttitle = {Featured {SAE} Searchable Databases},
+	abstract = {Featured {SAE} Searchable Databases},
+	urldate = {2023-09-01},
+	langid = {english},
+	file = {Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\FTGGYGJI\\data.html:text/html},
+}
+
+@online{noauthor_financial_nodate,
+	title = {Financial Data},
+	url = {http://www.dol.gov/agencies/eta/tradeact/data/financial-data},
+	titleaddon = {{DOL}},
+	urldate = {2023-09-01},
+	langid = {english},
+	file = {Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\FUUZ7UTQ\\financial-data.html:text/html},
+}
+
+@misc{porter_reevaluating_nodate,
+	title = {Reevaluating Experience in Congressional Primary Elections},
+	abstract = {The dynamics of congressional primaries have changed dramatically in recent years. Today, political amateur are more likely to defeat incumbents and experienced “quality” candidates than ever before. These trends lead us to question whether traditional theories of candidate success translate to today’s primary electoral landscape. Utilizing new data on candidate political experience for all primary candidates from 1980 to 2018, we show that past political experience is no longer the overriding predictor for primary election success. We test three potential explanations for this change: 1) voters’ preferences for inexperienced candidates; 2) the ideology of the candidates; and 3) the role of {PAC} money. We demonstrate {PAC} contributions to amateurs have skyrocketed in tandem with inexperienced candidate success. Finally, we evaluate whether nominating a politically inexperienced candidate puts parties at a disadvantage in the general election.},
+	author = {Porter, Rachel A and Treul, Sarah},
+	langid = {english},
+	file = {Porter and Treul - Reevaluating Experience in Congressional Primary E.pdf:C\:\\Users\\nicho\\Zotero\\storage\\XF3Y6JZZ\\Porter and Treul - Reevaluating Experience in Congressional Primary E.pdf:application/pdf},
+}
+
+@article{carson_nationalization_2020,
+	title = {Nationalization and the Incumbency Advantage},
+	volume = {73},
+	issn = {1065-9129},
+	url = {https://doi.org/10.1177/1065912919883696},
+	doi = {10.1177/1065912919883696},
+	abstract = {Legislative scholars have investigated both the growth in the incumbency advantage since the early 1970s and its decline in recent decades, but there are several unanswered questions about this phenomenon. In this paper, we examine the incumbency advantage across a much wider swath of history to better understand its connection with changing levels of electoral nationalization. Based on an analysis of U.S. House elections extending back to the antebellum era, we find that the incumbency advantage fluctuates in predictable ways over time with changes in nationalization, which can be a product of both institutional and political conditions. We also demonstrate that the increased influence of local forces in congressional elections may not be strictly necessary nor sufficient for the existence of an incumbency advantage.},
+	pages = {156--168},
+	number = {1},
+	journaltitle = {Political Research Quarterly},
+	author = {Carson, Jamie L. and Sievert, Joel and Williamson, Ryan D.},
+	urldate = {2023-09-11},
+	date = {2020-03-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc},
+	file = {SAGE PDF Full Text:C\:\\Users\\nicho\\Zotero\\storage\\H2MRSN9Y\\Carson et al. - 2020 - Nationalization and the Incumbency Advantage.pdf:application/pdf},
+}
+
+@article{jacobson_its_2015,
+	title = {It’s Nothing Personal: The Decline of the Incumbency Advantage in {US} House Elections},
+	volume = {77},
+	issn = {0022-3816},
+	url = {https://www.journals.uchicago.edu/doi/full/10.1086/681670},
+	doi = {10.1086/681670},
+	shorttitle = {It’s Nothing Personal},
+	abstract = {With little fanfare, the electoral advantage enjoyed by {US} representatives has fallen over the past several elections to levels not seen since the 1950s. The incumbency advantage has diminished in conjunction with an increase in party loyalty, straight-ticket voting, and president-centered electoral nationalization, products of the widening and increasingly coherent partisan divisions in the American electorate. Consequently, House incumbents now have a much harder time retaining districts that lean toward the rival party. Democrats had been the main beneficiaries of the denationalization of electoral politics that had enabled the incumbency advantage to grow, and they have thus been the main victims of the reemergence of a more party-centered electoral process. Republicans enjoy a long-standing structural advantage in the distribution of partisans across districts, so this trend has strengthened their grip on the House even as they have become less competitive in contests for the presidency.},
+	pages = {861--873},
+	number = {3},
+	journaltitle = {The Journal of Politics},
+	author = {Jacobson, Gary C.},
+	urldate = {2023-09-11},
+	date = {2015-07},
+	note = {Publisher: The University of Chicago Press},
+	file = {Full Text PDF:C\:\\Users\\nicho\\Zotero\\storage\\UR8QERLB\\Jacobson - 2015 - It’s Nothing Personal The Decline of the Incumben.pdf:application/pdf},
+}
+
+@article{porter_no_2023,
+	title = {No Experience Required: Early Donations and Amateur Candidate Success in Primary Elections},
+	volume = {48},
+	rights = {© 2022 Washington University in St. Louis.},
+	issn = {1939-9162},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/lsq.12396},
+	doi = {10.1111/lsq.12396},
+	shorttitle = {No Experience Required},
+	abstract = {The electoral dominance of “quality” candidates—political insiders with a history of holding office—is well-established. However, research on the recent rise in successful political neophytes is less studied. Despite longstanding trends in the predominance of experienced candidates in primary elections, nearly half of all quality candidates who ran in non-incumbent races lost to a candidate without prior electoral experience in 2018. In this article, we investigate the success of political newcomers in elections for the U.S. House of Representatives by examining a topic often overlooked in the growing literature on primaries: campaign finance. We show that, from 2016 to 2020, political newcomers saw (1) greater success in future fundraising, and (2) an increased likelihood of primary election victory when they garnered more early contributions from outside their district. This contrasts with prior elections, where early money from inside a candidate's own congressional district served as the strongest predictor of future fundraising and electoral success.},
+	pages = {455--466},
+	number = {2},
+	journaltitle = {Legislative Studies Quarterly},
+	author = {Porter, Rachel and Steelman, Tyler S.},
+	urldate = {2023-09-11},
+	date = {2023},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/lsq.12396},
+	file = {Full Text PDF:C\:\\Users\\nicho\\Zotero\\storage\\IJ5QTLZP\\Porter and Steelman - 2023 - No Experience Required Early Donations and Amateu.pdf:application/pdf;Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\5PSUIR92\\lsq.html:text/html},
+}
+
+@online{noauthor_united_nodate,
+	title = {United States ({USA}) Exports, Imports, and Trade Partners {\textbar} {OEC}},
+	url = {https://oec.world/en/profile/country/usa#yearly-trade},
+	abstract = {Find the latest trade statistics and economic complexity data for United States.},
+	titleaddon = {{OEC} - The Observatory of Economic Complexity},
+	urldate = {2023-09-16},
+	langid = {english},
+	file = {Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\TE8RT7PE\\usa.html:text/html},
+}
+
+@article{lee_randomized_2008,
+	title = {Randomized experiments from non-random selection in U.S. House elections},
+	volume = {142},
+	issn = {0304-4076},
+	url = {https://www.sciencedirect.com/science/article/pii/S0304407607001121},
+	doi = {10.1016/j.jeconom.2007.05.004},
+	series = {The regression discontinuity design: Theory and applications},
+	abstract = {This paper establishes the relatively weak conditions under which causal inferences from a regression–discontinuity ({RD}) analysis can be as credible as those from a randomized experiment, and hence under which the validity of the {RD} design can be tested by examining whether or not there is a discontinuity in any pre-determined (or “baseline”) variables at the {RD} threshold. Specifically, consider a standard treatment evaluation problem in which treatment is assigned to an individual if and only if V{\textgreater}v0, but where v0 is a known threshold, and V is observable. V can depend on the individual's characteristics and choices, but there is also a random chance element: for each individual, there exists a well-defined probability distribution for V. The density function—allowed to differ arbitrarily across the population—is assumed to be continuous. It is formally established that treatment status here is as good as randomized in a local neighborhood of V=v0. These ideas are illustrated in an analysis of U.S. House elections, where the inherent uncertainty in the final vote count is plausible, which would imply that the party that wins is essentially randomized among elections decided by a narrow margin. The evidence is consistent with this prediction, which is then used to generate “near-experimental” causal estimates of the electoral advantage to incumbency.},
+	pages = {675--697},
+	number = {2},
+	journaltitle = {Journal of Econometrics},
+	shortjournal = {Journal of Econometrics},
+	author = {Lee, David S.},
+	urldate = {2023-09-17},
+	date = {2008-02-01},
+	keywords = {Elections, Average treatment effects, Incumbency, Randomized experiments, Regression discontinuity},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\nicho\\Zotero\\storage\\KBKBCDF5\\Lee - 2008 - Randomized experiments from non-random selection i.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\8PYGYZSK\\S0304407607001121.html:text/html},
+}
+
+@article{abramowitz_rise_2016,
+	title = {The rise of negative partisanship and the nationalization of U.S. elections in the 21st century},
+	volume = {41},
+	issn = {02613794},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0261379415001857},
+	doi = {10.1016/j.electstud.2015.11.001},
+	abstract = {One of the most important developments affecting electoral competition in the United States has been the increasingly partisan behavior of the American electorate. Yet more voters than ever claim to be independents. We argue that the explanation for these seemingly contradictory trends is the rise of negative partisanship. Using data from the American National Election Studies, we show that as partisan identities have become more closely aligned with social, cultural and ideological divisions in American society, party supporters including leaning independents have developed increasingly negative feelings about the opposing party and its candidates. This has led to dramatic increases in party loyalty and straight-ticket voting, a steep decline in the advantage of incumbency and growing consistency between the results of presidential elections and the results of House, Senate and even state legislative elections. The rise of negative partisanship has had profound consequences for electoral competition, democratic representation and governance.},
+	pages = {12--22},
+	journaltitle = {Electoral Studies},
+	shortjournal = {Electoral Studies},
+	author = {Abramowitz, Alan I. and Webster, Steven},
+	urldate = {2023-09-19},
+	date = {2016-03},
+	langid = {english},
+	file = {main.pdf:C\:\\Users\\nicho\\Zotero\\storage\\I3DSM2XB\\main.pdf:application/pdf},
+}
+
+@article{nilsson_directed_2021,
+	title = {A directed acyclic graph for interactions},
+	volume = {50},
+	issn = {0300-5771},
+	url = {https://doi.org/10.1093/ije/dyaa211},
+	doi = {10.1093/ije/dyaa211},
+	abstract = {Directed acyclic graphs ({DAGs}) are of great help when researchers try to understand the nature of causal relationships and the consequences of conditioning on different variables. One fundamental feature of causal relations that has not been incorporated into the standard {DAG} framework is interaction, i.e. when the effect of one variable (on a chosen scale) depends on the value that another variable is set to. In this paper, we propose a new type of {DAG}—the interaction {DAG} ({IDAG}), which can be used to understand this phenomenon.The {IDAG} works like any {DAG} but instead of including a node for the outcome, it includes a node for a causal effect. We introduce concepts such as confounded interaction and total, direct and indirect interaction, showing that these can be depicted in ways analogous to how similar concepts are depicted in standard {DAGs}. This also allows for conclusions on which treatment interactions to account for empirically. Moreover, since generalizability can be compromised in the presence of underlying interactions, the framework can be used to illustrate threats to generalizability and to identify variables to account for in order to make results valid for the target population.The {IDAG} allows for a both intuitive and stringent way of illustrating interactions. It helps to distinguish between causal and non-causal mechanisms behind effect variation. Conclusions about how to empirically estimate interactions can be drawn—as well as conclusions about how to achieve generalizability in contexts where interest lies in estimating an overall effect.},
+	pages = {613--619},
+	number = {2},
+	journaltitle = {International Journal of Epidemiology},
+	shortjournal = {International Journal of Epidemiology},
+	author = {Nilsson, Anton and Bonander, Carl and Strömberg, Ulf and Björk, Jonas},
+	urldate = {2023-09-23},
+	date = {2021-04-01},
+	file = {Full Text PDF:C\:\\Users\\nicho\\Zotero\\storage\\AUXSUAPX\\Nilsson et al. - 2021 - A directed acyclic graph for interactions.pdf:application/pdf;Snapshot:C\:\\Users\\nicho\\Zotero\\storage\\PBPYA5KB\\5998421.html:text/html},
+}
